--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#667eea",
-    "navigationBarTitleText": "瑜伽知识库",
+    "navigationBarTitleText": "思宁瑜伽馆",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
